objects/FinancialPromotion__c.object
<CustomObject>
    <description>Financial Promotions #SalesTeam #Sprint17

In the framework of the #Fan project, it is requested to be able to configure in the CRM financial promotions that include promotions with banks, with credit cards and all means of payment available.

The financial promotions that are set up may have different application rules depending on the context in which a sale is being made, such as on the basis of specific offers or specific promotions for an area or force of sale. The promotion could also be made available based on the characteristics of the products, services or bundles configured or even characteristics of the customer who is making the purchase.</description>
    <fields>
        <fullName>BankEntities__c</fullName>
        <description>Bank Entities</description>
        <inlineHelpText>Bank Entities</inlineHelpText>
        <label>Bancos</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ExternalBankEntities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChannelPromotion__c</fullName>
        <description>Campo creado para la historia PFTA-9109</description>
        <label>Canal en Promoción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreditCards__c</fullName>
        <description>Credit Cards</description>
        <inlineHelpText>Credit Cards</inlineHelpText>
        <label>Tarjetas de Credito</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CreditCards</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryMethod__c</fullName>
        <description>Campo creado para la historia PFTA-9109</description>
        <label>Método de Entrega</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Methods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Porcentaje de descuento</description>
        <inlineHelpText>Porcentaje de descuento</inlineHelpText>
        <label>Descuento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <description>Fecha de vigencia desde</description>
        <inlineHelpText>Fecha de vigencia desde</inlineHelpText>
        <label>Vigencia Desde</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdentificationNumber__c</fullName>
        <description>Nro. de identificación de la promoción financiera</description>
        <inlineHelpText>Nro. de identificación de la promoción financiera</inlineHelpText>
        <label>Nro. de identificación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstalmentPlan__c</fullName>
        <description>Plan de cuotas</description>
        <label>Plan de Cuotas</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instalment__c</fullName>
        <label>Cuotas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <description>interest</description>
        <inlineHelpText>interest</inlineHelpText>
        <label>Coeficiente</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationPromotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo creado para la historia PFTA-9109</description>
        <label>Localidad en Promoción</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.CountryName__c</field>
                <operation>startsWith</operation>
                <valueField>$Source.ProvincePromotion__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Financial Promotions</relationshipLabel>
        <relationshipName>Financial_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NombrePromocion__c</fullName>
        <description>Nombre de Promoción</description>
        <inlineHelpText>Nombre de Promoción</inlineHelpText>
        <label>Nombre de Promoción</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentGateway__c</fullName>
        <description>Payment gateway</description>
        <inlineHelpText>Payment gateway</inlineHelpText>
        <label>Gateway de Pagos</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentMethodPromotion__c</fullName>
        <description>Campo creado para la historia PFTA-4617</description>
        <label>Medio de Pago en Promoción</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ChannelPromotion__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PaymentMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <formula>(Interest__c - 1 ) * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Porcentaje</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductPromotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo creado para la historia PFTA-9109</description>
        <label>Producto en Promoción</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Financial Promotions</relationshipLabel>
        <relationshipName>Financial_Promotions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromotionStatus__c</fullName>
        <description>Estado de la promoción</description>
        <inlineHelpText>Estado de la promoción</inlineHelpText>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vigente</fullName>
                </value>
                <value>
                    <fullName>Suspendida</fullName>
                </value>
                <value>
                    <fullName>No Vigente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PromotionType__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundles</fullName>
                </value>
                <value>
                    <fullName>Portabilidad</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProvincePromotion__c</fullName>
        <description>Campo creado para la historia PFTA-9109</description>
        <label>Provincia en promoción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RegionPromotion__c</fullName>
        <description>Campo creado para la historia PFTA-9109</description>
        <label>Region en Promoción</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <description>Fecha de vigencia hasta</description>
        <inlineHelpText>Fecha de vigencia hasta</inlineHelpText>
        <label>Vigencia Hasta</label>
        <type>Date</type>
    </fields>
    <label>Financial Promotion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NombrePromocion__c</columns>
        <columns>CreditCards__c</columns>
        <columns>BankEntities__c</columns>
        <columns>Instalment__c</columns>
        <columns>InstalmentPlan__c</columns>
        <columns>Discount__c</columns>
        <columns>Interest__c</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>PaymentGateway__c</columns>
        <columns>PromotionStatus__c</columns>
        <columns>PromotionType__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PF-{0000000000}</displayFormat>
        <label>Código</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Promotions</pluralLabel>
    <recordTypes>
        <fullName>Credit_Card</fullName>
        <active>true</active>
        <description>Credit Card</description>
        <label>Credit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit_Card</fullName>
        <active>true</active>
        <label>Debit Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>Debit_to_Next_Bill</fullName>
        <active>true</active>
        <description>Debit to Next Bill</description>
        <label>Debit to Next Bill</label>
    </recordTypes>
    <recordTypes>
        <fullName>EffectivePromotion</fullName>
        <active>true</active>
        <label>Effective Promotion</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>